@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/prime-el
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/prime-el/ChangeLog,v 1.2 2003/12/24 22:57:55 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/prime-el/ChangeLog,v 1.3 2003/12/27 13:32:05 usata Exp $
+
+*prime-el-1.2.1 (27 Dec 2003)
+
+  27 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> prime-el-1.2.1.ebuild:
+  Version bumped
 
   25 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> prime-el-1.2.0.ebuild:
   Considered stable
